--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   <body>
     <div id="message">
       <h2>Halo Dunia</h2>
-      <h1>Saya Dimas Wirawan</h1>
-      <p>Saya suka sekali pemrograman PHP Native dan Vanilla Javascript. Saya mahir dalam pembuatan theme maupun plugin Wordpress.</p>
+      <h1>Saya Dimas Wirawan, SH</h1>
+      <p>Saya suka sekali pemrograman PHP Native dan Vanilla Javascript. Saya juga mahir dalam pembuatan theme maupun plugin Wordpress.</p>
       <h3>Apa lagi?</h3>
-      <p>Membuat website dengan Express JS, Hugo, Membuat aplikasi mobile dengan Cordova, Membuat aplikasi Desktop dengan Electron</p>
+      <p>Membuat website dengan Express JS, Hugo, Membuat aplikasi mobile dengan Cordova, Membuat aplikasi Desktop dengan Electron, HTML CSS Frontend dan NextJS (React)</p>
     </div>
   </body>
 </html>
